--- a/src/main/resources/assets/wwm/lang/en_us.json
+++ b/src/main/resources/assets/wwm/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.wwm.pistol": "Pistol",
-  "item.wwm.testammo": "Test Ammo"
+  "item.wwm.testammo": "Test Ammo",
+  "block.wwm.tungblock": "Tungsten Block"
 
 
 }
